--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
 <body>
     <canvas id="canvas" width="800px" height="600px"></canvas>
+    <button id="startButton">Start</button>
+    <button id="options">Options</button>
 </body>
 
 </html>
