--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <canvas id="canvas" width="800px" height="600px"></canvas>
     <button id="startButton">Start</button>
-    <button id="options">Options</button>
+    <button id="resumeButton">Resume</button>
 </body>
 
 </html>
